# wdphoto

./: MANIFEST.in  README.md  packages.txt  pyproject.toml  setup.py
.ipynb_checkpoints/: pyproject-checkpoint.toml
docs/: conf.py  index.md  index.rst
docs/source/: conf.py  index.rst  test2.rst
example/: test.ipynb
example/.ipynb_checkpoints/: test-checkpoint.ipynb
src/wdphoto/: fit.py
src/wdphoto/.ipynb_checkpoints/: __init__-checkpoint.py  models-checkpoint.py
tests/: build_csv.ipynb  emcee_fit.py  notes.md  raddi.csv  test.ipynb
tests/.ipynb_checkpoints/: test-checkpoint.ipynb
wdphoto/: __init__.py  dered.py  fit.py  interpolator.py  utils.py
wdphoto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wdphoto/data/laplata/: CO_Hdef_Massive.csv  CO_Hrich_Massive.csv  CO_models.csv  He_models.csv  ONe_Hdef_Massive.csv  ONe_Hrich_Massive.csv  ONe_models.csv  formatter.ipynb
wdphoto/src/: __init__.py
wdphoto/src/.ipynb_checkpoints/: fit-checkpoint.py  models-checkpoint.py
