[build-system]
requires = ["astropy",
            "astroquery",
            "dustmaps",
            "extinction",
            "pyphot",
            "lmfit",
            "tqdm",
            "numpy",
            "matplotlib",
            "re",
            "bisect",
            "scipy",
            "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

project]
name = "wdphoto"
version = "0.0.1"
authors = [
  { name="Stefan Arseneau", email="arseneausm@gmail.com" },
]
description = "Tools for fitting white dwarf SEDs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stefanarseneau/wdphoto"
Issues = "https://github.com/stefanarseneau/wdphoto/issues"